<resources>
    <string name="zenitech_app_name">Zenitech© IT Solutions</string>
    <string name="password">Password</string>
    <string name="zenitech_app_desc">Your one stop shop for all your IT issues…</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="tab_title_cart">My Cart</string>
    <string name="tab_title_history">WishList</string>
    <string name="tab_title_shop">Shop</string>
    <string name="tab_title_issues">Issues</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>

    <!--Theme Summary-->
    <string name="label_color_scheme_title">Color scheme</string>

    <string name="label_shape_system_title">Shape system</string>
    <string name="shape_appearance_small_label">S</string>
    <string name="shape_appearance_medium_label">M</string>
    <string name="shape_appearance_large_label">L</string>

    <string name="label_typography_scale_title">Typography scale</string>
    <string name="text_appearance_h1_label">H1</string>
    <string name="text_appearance_h2_label">H2</string>
    <string name="text_appearance_h3_label">H3</string>
    <string name="text_appearance_h4_label">H4</string>
    <string name="text_appearance_h5_label">H5</string>
    <string name="text_appearance_h6_label">H6</string>
    <string name="text_appearance_subtitle_1_label">Subtitle 1</string>
    <string name="text_appearance_subtitle_2_label">Subtitle 2</string>
    <string name="text_appearance_body_1_label">Body 1</string>
    <string name="text_appearance_body_2_label">Body 2</string>
    <string name="text_appearance_button_label">Button</string>
    <string name="text_appearance_caption_label">Caption</string>
    <string name="text_appearance_overline_label">Overline</string>
    <string name="open_url">Show on website</string>
    <string name="instructions_enable_dark_title">Dark Theme</string>
    <string name="tab_title_settings">Settings</string>
    <string name="post_issue_title">Post New Issue</string>
    <string name="post">Post Now</string>
    <string name="issue_title">Category</string>
    <string name="post_issue_desc">Kindly fill in the details of your current hardware issue and receive instant
        feedback from our available customer service agents. Please specify the category and a short description as well
    </string>
    <string name="email">Email Address</string>
    <string name="created_at">Account creation date</string>
    <string name="account_information">Account information</string>
    <string name="other_category">Other</string>
    <string name="laptop_category">Laptop</string>
    <string name="select_a_category">Select a category</string>
    <string name="accessories_category">Accessories</string>
    <string name="phone_category">Smart Phone</string>
    <string name="checkout">Checkout Items</string>
    <string name="remove_item">Remove</string>
    <string name="login_google">Login with Google instead</string>
    <string name="welcome_text">Hey! Welcome back,
        <b>%s</b>
    </string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="about_us">About Us</string>
    <string name="get_started">Get started</string>
    <string name="user_interface">User Interface</string>
    <string name="logout">Logout</string>
    <string name="theme_builder">Theme Builder</string>
    <string name="reset_password">Reset password</string>
    <string name="instagram">Instagram Login</string>
    <string name="facebook">Facebook Login</string>
    <string name="skip">Skip</string>
    <string name="store_auth_prompt">Continue as Store</string>
    <string name="customer_auth_prompt">Continue as Customer</string>
    <string name="customer">Customer</string>
    <string name="store">Store</string>
</resources>
