<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="@string/google_sign_in"
          android:icon="@drawable/googleg_standard_color_18"
          app:showAsAction="ifRoom"
          android:id="@+id/menu_google_login"/>

    <item android:title="@string/instagram"
          android:icon="@drawable/instagram"
          app:showAsAction="never"
          android:id="@+id/menu_instagram_login"/>

    <item android:title="@string/facebook"
          android:icon="@drawable/facebook"
          app:showAsAction="never"
          android:id="@+id/menu_facebook_login"/>

    <item android:title="@string/forgot_password"
          android:icon="@drawable/twotone_group_24px"
          app:showAsAction="never"
          android:id="@+id/menu_reset_password"/>

    <item android:title="@string/about_us"
          android:icon="@drawable/twotone_business_24px"
          app:showAsAction="never"
          android:id="@+id/menu_about"/>

</menu>