<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:paddingTop="@dimen/keyline_2"
            android:paddingStart="@dimen/keyline_5"
            android:paddingEnd="@dimen/keyline_5"
            android:paddingBottom="@dimen/keyline_5">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?textAppearanceHeadline6"
                android:alpha="?alphaEmphasisHigh"
                android:firstBaselineToTopHeight="40dp"
                android:text="@string/post_issue_title"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody1"
                android:alpha="?alphaEmphasisMedium"
                android:firstBaselineToTopHeight="36dp"
                android:text="@string/post_issue_desc"/>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/username_label"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_width="match_parent"
                android:hint="@string/issue_title"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:padding="@dimen/padding_normal"
                                                                     android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
                                                                     android:id="@+id/category"/>

            <!--<com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textCapSentences|textAutoComplete|textAutoCorrect"/>-->

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/description"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:id="@+id/post_issue"
                app:iconGravity="end"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_marginTop="@dimen/padding_large"
                android:layout_gravity="center_horizontal"
                app:icon="@drawable/twotone_send_24px"/>


    </LinearLayout>
</layout>